Update Azure Pipelines configuration: add PublishPipelineArtifact task and replace Kubectl task with AzureCLI for deploying manifests

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -4,6 +4,10 @@ hr {
   @apply border-gray-300;
 }
 
+a {
+  color: var(--color-sky-600) !important;
+}
+
 /* :root {
   --background: #ffffff;
   --foreground: #171717;
